# ImmuneBytes

NEW/dapp/: tailwind.config.js
NEW/dapp.orig/: server.py
NEW/interfaces/: IRegistry.sol
NEW/scripts/: LICENSE  MANIFEST.in  README.md  build.sh  full_cycle.py  participant_quickstart.ipynb  setup.cfg
NEW/scripts/src/rci_competition_utilities/: organizer.py  participant.py
NEW/scripts/src/rci_competition_utilities/utilities/: ChildToken.py  Competition.py
NEW/scripts/src/rci_competition_utilities/utilities/contracts/: ChildToken.json  Competition.json
NEW/tests/: state_parent.py  test_competition_child_token.py  test_competition_child_token_proxy.py  test_competition_state.py  test_multisig.py  test_registry.py  test_token_state.py  utils_for_testing.py
RCI_contracts/contracts/: ChildToken.sol  Registry.sol
RCI_contracts/interfaces/: ICompetition.sol  IRegistry.sol  IToken.sol
scripts/: organizer_quickstart.ipynb
tests/: batch_call.py  test_access_control.py  test_child_token.py  test_competition.py  test_competition_child_token_proxy_multisig.py  test_competition_state.py  test_proxy.py  test_token.py  tst_TournamentAdmin.py
tournament-contract-26ea641b959a17b0a987f429a50d7f0fecde37ad/: README.md  Smart Contract Function Restrictions.xlsx  brownie-config.yaml
tournament-contract-26ea641b959a17b0a987f429a50d7f0fecde37ad/dapp/: README.md  package-lock.json  package.json
tournament-contract-26ea641b959a17b0a987f429a50d7f0fecde37ad/dapp.orig/: README.md
tournament-contract-26ea641b959a17b0a987f429a50d7f0fecde37ad/interfaces/: ICompetition.sol  (+1 more)
(+28 files in other folders)
