
[metadata]
name = rci_tournament_utilities
version = 0.1a19
author = lubin
author_email = lubin.tan@rocketcapital.ai
description = Utility functions for participating in the RCI Tournament.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rocketcapital-ai/tournament-contract/tree/main/scripts
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data=True
install_requires =
    web3==5.19.0
    base58==2.1.0
    requests==2.25.1
    ipykernel
    ipython
    ipython-genutils
    jupyter-client
    jupyter-core
    notebook
package_dir =
    = src
packages = find:
python_requires = >=3.9


[options.packages.find]
where = src